# tic-tac-toe-rs

./: Cargo.toml  README.md
algorithm/: Cargo.toml  build.rs
algorithm/src/: lib.rs
algorithm/src/tictactoe/: algorithm.rs  enums.rs
proto/: tictactoe.proto
src/client/: main.rs  utils.rs
src/server/: main.rs
