[package]
name = "algorithm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "macros", "sync", "time"] }
async-stream = "0.2"
anyhow = "1.0.68"

[build-dependencies]
tonic-build = "0.7"
